# vqa-disagree

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
analysis/: clustering.py  normalize.py  question_typing.py  stats.py
figures/: table1_accuracy.tex  table2_datasets.tex
modal_app/: common.py  inference.py  pipeline.py
paper/: main.tex  refs.bib
results/: disagreement_full.csv  internvl.csv  llava.csv  metrics_summary.json  minicpm.csv  oracle_deceptive.csv  qwen.csv  sbert_sensitivity.csv
scripts/: 01_smoke_test.py  01b_smoke_minicpm.py  02_run_all_vlms.py  03_compute_disagreement.py  04_gpt4o_oracle.py  05_make_dataset.py  06_compute_metrics.py  07_make_figures.py  08_oracle_deceptive.py  09_sbert_sensitivity.py  10_merge_and_analyze.py
