[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vqa-disagree"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.73",
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
    "scipy",
    "scikit-learn",
    "huggingface_hub",
    "datasets",
    "pillow",
    "tqdm",
    "openai",
    "sentence-transformers",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modal_app*", "analysis*"]
